--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section once="footers" class="cid-rGc5Q3MzWh" id="footer6-5">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section once="footers" class="cid-rGc5Q3MzWh" id="footer6-5">
 
     
 
@@ -113,7 +113,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="HC+FzjrwKw4rqIHSDRaDaHFR8hdk0YX01QsfU4cd/EBFSS6xF9qXvVE2vF07g9W54pPl3Iulq62LjZKaKrxNnbGspGzuqTd0StcT8Sow62jx7A2srdOV4Apsj5M89WBd">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BVazsnqJt0gnWDiQyfDUbxugjvsCOX4v5lZpdNGVW2kd7dB5hOUe0MeThEDdF1Dz9LSQZWa2uAm9XMVsgKTx+5/GiJQI+0uWJ07jE87FMUas9lkp2mtcxrUOR2DxiXPi">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
