--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
                         <img src="assets/images/swan-122x122.png" alt="Grey Swan " title="Expect the unexpected" style="height: 5.3rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="https://mobirise.co">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="index.html">
                         GREY SWAN</a></span>
             </div>
         </div>
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="header10 cid-rGc7dlGxLX mbr-fullscreen mbr-parallax-background" id="header10-7">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header10 cid-rGc7dlGxLX mbr-fullscreen mbr-parallax-background" id="header10-7">
 
     
 
@@ -97,7 +97,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="YhnnXBxl1cgch9Nh3a/FKndksLetwb58JTDVSCDuyICeaHswMm6Vw8ZsGZO+9XrfgMdYuUOehybDBTDCc9f7GVLbjJJljpFdT2sNDsjB7mYMPkTk4gId9qGWqizhvY12">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5YrmcfowKWVgN2VATju4yHM004QnBJu26w4Z3kdE4yjbgbwHRKyYuCciGVLCMlPa9CFI7qCP6V0MlB/x78xqRaPK/4GjZGFDcWFv7isYEwUwsPRnhmjiZfrVVlmZUr+Q">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
