--- a/index.html
+++ b/index.html
@@ -43,21 +43,20 @@
                         <img src="assets/images/swan-122x122.png" alt="Grey Swan " title="Expect the unexpected" style="height: 5.3rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="https://mobirise.co">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="index.html">
                         GREY SWAN</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-black display-4" href="contact.html">Contact &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="tel:+1-234-567-8901"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn"></span>
-                    Contact &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></div>
+            
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="cid-rGc2fXayTG mbr-fullscreen mbr-parallax-background" id="header2-0">
+<section class="engine"><a href="https://mobirise.info/z">best website templates</a></section><section class="cid-rGc2fXayTG mbr-fullscreen mbr-parallax-background" id="header2-0">
 
     
 
